--- a/demo/skeleton/translations/messages.nl.yaml
+++ b/demo/skeleton/translations/messages.nl.yaml
@@ -10,6 +10,7 @@ aria:
 blog:
     intro: 'Tous les 2 mois, l''équipe eMS met en évidence des nouveaux sujets liés à elasticMS et des astuces IT.'
     title: Blog
+    filter: Filters
 breadcrumb:
     back-to: 'Terug naar  %title%'
     homepage: homepagina
