--- a/EMS/xliff/tests/Unit/Resources/Extractions/TC-11/expected_us-ascii2.0.xlf
+++ b/EMS/xliff/tests/Unit/Resources/Extractions/TC-11/expected_us-ascii2.0.xlf
@@ -76,19 +76,7 @@
         <group id="/html/body/ul[2]/li[1]">
           <unit id="/html/body/ul[2]/li[1]/text()[1]">
             <segment id="/html/body/ul[2]/li[1]/text()[1]">
-              <source>de opdrachten en taken van civiele veiligheid, uitgevoerd door de vrijwillige brandweerlieden en de vrijwilligers van de Civiele Bescherming en vermeld in de bijlage van het </source>
-              <target/>
-            </segment>
-          </unit>
-          <unit id="/html/body/ul[2]/li[1]/a">
-            <segment id="/html/body/ul[2]/li[1]/a">
-              <source>koninklijk besluit van 10 juni 2014</source>
-              <target/>
-            </segment>
-          </unit>
-          <unit id="/html/body/ul[2]/li[1]/text()[2]">
-            <segment id="/html/body/ul[2]/li[1]/text()[2]">
-              <source>, meer bepaald </source>
+              <source>de opdrachten en taken van civiele veiligheid, uitgevoerd door de vrijwillige brandweerlieden en de vrijwilligers van de Civiele Bescherming en vermeld in de bijlage van het <g ctype="x-html-a" html:href="http://www.ejustice.just.fgov.be/cgi_loi/loi_a1.pl?language=nl&amp;la=N&amp;cn=2014061012&amp;table_name=wet&amp;&amp;caller=list&amp;N&amp;fromtab=wet&amp;tri=dd+AS+RANK&amp;rech=1&amp;numero=1&amp;sql=(text+contains+(%27%27))#LNK0007" html:title="ambulance">koninklijk besluit van 10 juni 2014</g>, meer bepaald </source>
               <target/>
             </segment>
           </unit>
@@ -198,250 +186,6 @@
     <group id="[%locale%][body2]">
       <unit id="/html/body/p[1]">
         <segment id="/html/body/p[1]">
-          <source>
-  &#160;
-</source>
-          <target/>
-        </segment>
-      </unit>
-      <unit id="/html/body/p[2]">
-        <segment id="/html/body/p[2]">
-          <source>
-  Een speciale uitsluitingsregeling is - op basis van artikel
-  17quater van het koninklijk besluit van 28 november 1969 - van
-  toepassing op de volgende personen:
-</source>
-          <target/>
-        </segment>
-      </unit>
-      <group id="/html/body/ul[1]">
-        <unit id="/html/body/ul[1]/li[1]">
-          <segment id="/html/body/ul[1]/li[1]">
-            <source>de vrijwillige brandweerlieden en de vrijwillige
-  ambulanciers van een hulpverleningszone;
-  </source>
-            <target/>
-          </segment>
-        </unit>
-        <unit id="/html/body/ul[1]/li[2]">
-          <segment id="/html/body/ul[1]/li[2]">
-            <source>de vrijwillige hulpverleners-ambulanciers van een door de
-  Minister van Volksgezondheid erkende ambulancedienst die in het
-  bezit zijn van een brevet afgeleverd door een opleidings- en
-  vervolmakingscentrum voor hulpverleners;
-  </source>
-            <target/>
-          </segment>
-        </unit>
-        <unit id="/html/body/ul[1]/li[3]">
-          <segment id="/html/body/ul[1]/li[3]">
-            <source>de vrijwilligers van de Civiele Bescherming.
-  </source>
-            <target/>
-          </segment>
-        </unit>
-      </group>
-      <unit id="/html/body/p[3]">
-        <segment id="/html/body/p[3]">
-          <source>
-  De &lt;strong&gt;vergoedingen voor 'uitzonderlijke'
-  prestaties&lt;/strong&gt; die de vrijwillige brandweerlieden, de
-  vrijwilligers van de Civiele Bescherming en de vrijwillige
-  ambulanciers uitvoeren bij de organisaties die hen
-  tewerkstellen, zijn altijd vrijgesteld van
-  socialezekerheidsbijdragen, ongeacht het bedrag van de
-  vergoeding.&#160;
-</source>
-          <target/>
-        </segment>
-      </unit>
-      <unit id="/html/body/p[4]">
-        <segment id="/html/body/p[4]">
-          <source>
-  Als 'uitzonderlijke' prestaties worden beschouwd:
-</source>
-          <target/>
-        </segment>
-      </unit>
-      <group id="/html/body/ul[2]">
-        <group id="/html/body/ul[2]/li[1]">
-          <unit id="/html/body/ul[2]/li[1]/text()[1]">
-            <segment id="/html/body/ul[2]/li[1]/text()[1]">
-              <source>de opdrachten en taken van civiele veiligheid, uitgevoerd door de vrijwillige brandweerlieden en de vrijwilligers van de Civiele Bescherming en vermeld in de bijlage van het </source>
-              <target/>
-            </segment>
-          </unit>
-          <unit id="/html/body/ul[2]/li[1]/a">
-            <segment id="/html/body/ul[2]/li[1]/a">
-              <source>koninklijk besluit van 10 juni 2014</source>
-              <target/>
-            </segment>
-          </unit>
-          <unit id="/html/body/ul[2]/li[1]/text()[2]">
-            <segment id="/html/body/ul[2]/li[1]/text()[2]">
-              <source>, meer bepaald </source>
-              <target/>
-            </segment>
-          </unit>
-          <group id="/html/body/ul[2]/li[1]/ul">
-            <unit id="/html/body/ul[2]/li[1]/ul/li[1]">
-              <segment id="/html/body/ul[2]/li[1]/ul/li[1]">
-                <source>kolom 1 en punt 6 voor de vrijwillige brandweerlieden;
-      </source>
-                <target/>
-              </segment>
-            </unit>
-            <unit id="/html/body/ul[2]/li[1]/ul/li[2]">
-              <segment id="/html/body/ul[2]/li[1]/ul/li[2]">
-                <source>kolom 2 en de punten 5 en 6 voor de vrijwilligers van
-      de Civiele Bescherming;
-      </source>
-                <target/>
-              </segment>
-            </unit>
-          </group>
-        </group>
-        <group id="/html/body/ul[2]/li[2]">
-          <unit id="/html/body/ul[2]/li[2]/text()[1]">
-            <segment id="/html/body/ul[2]/li[2]/text()[1]">
-              <source>de prestaties van dringende medische hulpverlening, verricht door de vrijwillige ambulanciers, de vrijwillige brandweerlieden of de vrijwilligers van de Civiele Bescherming; </source>
-              <target/>
-            </segment>
-          </unit>
-          <group id="/html/body/ul[2]/li[2]/ul">
-            <unit id="/html/body/ul[2]/li[2]/ul/li">
-              <segment id="/html/body/ul[2]/li[2]/ul/li">
-                <source>het betreft het onmiddellijk verstrekken van aangepaste
-      hulp aan alle personen van wie de gezondheidstoestand ten
-      gevolge van een ongeval, een plotse aandoening of een
-      plotse verwikkeling van een ziekte een dringende
-      tussenkomst vereist na een oproep via het eenvormig
-      oproepstelsel waardoor de hulpverlening, het vervoer en de
-      opvang in een aangepaste ziekenhuisdienst worden verzekerd.
-      </source>
-                <target/>
-              </segment>
-            </unit>
-          </group>
-        </group>
-      </group>
-      <unit id="/html/body/p[5]">
-        <segment id="/html/body/p[5]">
-          <source>
-  De &lt;strong&gt;vergoedingen voor 'niet-uitzonderlijke'
-  prestaties&lt;/strong&gt; zijn vrijgesteld voor zover het bedrag van
-  785,95 EUR per kwartaal (niet ge&#239;ndexeerd) niet overschreden
-  wordt. Het ge&#239;ndexeerd bedrag van de vergoedingen dat
-  vrijgesteld is van socialezekerheidsbijdragen, bedraagt
-  &lt;span class="newWord"&gt;1.191,26 EUR&lt;/span&gt; per kwartaal vanaf
-  het &lt;span class="newWord"&gt;2&lt;sup&gt;de&lt;/sup&gt; kwartaal van
-  2022&lt;/span&gt;.
-</source>
-          <target/>
-        </segment>
-      </unit>
-      <unit id="/html/body/p[6]">
-        <segment id="/html/body/p[6]">
-          <source>
-  &#160;
-</source>
-          <target/>
-        </segment>
-      </unit>
-      <group id="/html/body/div">
-        <unit id="/html/body/div/p">
-          <segment id="/html/body/div/p">
-            <source>
-    &lt;strong&gt;Voorgaande kwartalen&lt;/strong&gt;
-  </source>
-            <target/>
-          </segment>
-        </unit>
-        <group id="/html/body/div/ul">
-          <unit id="/html/body/div/ul/li[1]">
-            <segment id="/html/body/div/ul/li[1]">
-              <source>1.078,95 EUR van het 1&lt;sup&gt;ste&lt;/sup&gt; kwartaal van 2018
-    tot het 3&lt;sup&gt;de&lt;/sup&gt; kwartaal van 2018 (alle categorie&#235;n);
-    </source>
-              <target/>
-            </segment>
-          </unit>
-          <unit id="/html/body/div/ul/li[2]">
-            <segment id="/html/body/div/ul/li[2]">
-              <source>1.100,49 EUR van het 4&lt;sup&gt;de&lt;/sup&gt; kwartaal van 2018 tot
-    het 1&lt;sup&gt;ste&lt;/sup&gt; kwartaal van 2020 (alle categorie&#235;n);
-    </source>
-              <target/>
-            </segment>
-          </unit>
-          <unit id="/html/body/div/ul/li[3]">
-            <segment id="/html/body/div/ul/li[3]">
-              <source>1.122,49 EUR van het 2&lt;sup&gt;de&lt;/sup&gt; kwartaal van 2020 tot
-    het 3&lt;sup&gt;de&lt;/sup&gt; kwartaal van 2021 (alle categorie&#235;n);
-    </source>
-              <target/>
-            </segment>
-          </unit>
-          <unit id="/html/body/div/ul/li[4]">
-            <segment id="/html/body/div/ul/li[4]">
-              <source>1.144,97 EUR voor het 4&lt;sup&gt;de&lt;/sup&gt; kwartaal van
-    2021&#160;(alle categorie&#235;n);
-    </source>
-              <target/>
-            </segment>
-          </unit>
-          <unit id="/html/body/div/ul/li[5]">
-            <segment id="/html/body/div/ul/li[5]">
-              <source>1.167,84 EUR voor het 1&lt;sup&gt;ste&lt;/sup&gt; kwartaal van
-    2022&#160;(alle categorie&#235;n).
-    </source>
-              <target/>
-            </segment>
-          </unit>
-        </group>
-      </group>
-      <unit id="/html/body/p[7]">
-        <segment id="/html/body/p[7]">
-          <source>
-  Indien het maximumbedrag van &lt;span class="newWord"&gt;1.191,26
-  EUR&lt;/span&gt; overschreden wordt, zijn er persoonlijke en
-  patronale socialezekerheidsbijdragen verschuldigd op het totale
-  bedrag van de vergoedingen voor 'niet-uitzonderlijke'
-  prestaties en niet enkel op het gedeelte boven het
-  drempelbedrag.
-</source>
-          <target/>
-        </segment>
-      </unit>
-      <unit id="/html/body/p[8]">
-        <segment id="/html/body/p[8]">
-          <source>
-  &#160;
-</source>
-          <target/>
-        </segment>
-      </unit>
-      <unit id="/html/body/p[9]">
-        <segment id="/html/body/p[9]">
-          <source>
-  Een persoon die bij een hulpverleningszone, een erkende
-  ambulancedienst of de Civiele Bescherming&#160; operationele
-  prestaties levert en verbonden is met een arbeidsovereenkomst,
-  een statutaire aanstelling of een dienstencontract, kan bij
-  dezelfde organisatie geen prestaties als vrijwillige
-  brandweerman, vrijwillige ambulancier of vrijwilliger van de
-  Civiele Bescherming meer verrichten. Als de RSZ de cumulatie
-  vaststelt, dan worden alle vergoedingen uit hoofde van de
-  beroepsactiviteit onderworpen aan
-  socialezekerheidsbijdragen.&#160;
-</source>
-          <target/>
-        </segment>
-      </unit>
-    </group>
-    <group id="[%locale%][body3]">
-      <unit id="/html/body/p[1]">
-        <segment id="/html/body/p[1]">
           <source> &#160; </source>
           <target/>
         </segment>
@@ -488,19 +232,7 @@
         <group id="/html/body/ul[2]/li[1]">
           <unit id="/html/body/ul[2]/li[1]/text()[1]">
             <segment id="/html/body/ul[2]/li[1]/text()[1]">
-              <source>de opdrachten en taken van civiele veiligheid, uitgevoerd door de vrijwillige brandweerlieden en de vrijwilligers van de Civiele Bescherming en vermeld in de bijlage van het </source>
-              <target/>
-            </segment>
-          </unit>
-          <unit id="/html/body/ul[2]/li[1]/a">
-            <segment id="/html/body/ul[2]/li[1]/a">
-              <source>koninklijk besluit van 10 juni 2014</source>
-              <target/>
-            </segment>
-          </unit>
-          <unit id="/html/body/ul[2]/li[1]/text()[2]">
-            <segment id="/html/body/ul[2]/li[1]/text()[2]">
-              <source>, meer bepaald </source>
+              <source>de opdrachten en taken van civiele veiligheid, uitgevoerd door de vrijwillige brandweerlieden en de vrijwilligers van de Civiele Bescherming en vermeld in de bijlage van het <g ctype="x-html-a" html:href="http://www.ejustice.just.fgov.be/cgi_loi/loi_a1.pl?language=nl&amp;la=N&amp;cn=2014061012&amp;table_name=wet&amp;&amp;caller=list&amp;N&amp;fromtab=wet&amp;tri=dd+AS+RANK&amp;rech=1&amp;numero=1&amp;sql=(text+contains+(%27%27))#LNK0007" html:title="ambulance">koninklijk besluit van 10 juni 2014</g>, meer bepaald </source>
               <target/>
             </segment>
           </unit>
