--- a/EMS/xliff/tests/Unit/Resources/Extractions/TC-8/expected_us-ascii2.0.xlf
+++ b/EMS/xliff/tests/Unit/Resources/Extractions/TC-8/expected_us-ascii2.0.xlf
@@ -38,20 +38,8 @@
         <group id="/html/body/ol/li[1]">
           <unit id="/html/body/ol/li[1]/text()[1]">
             <segment id="/html/body/ol/li[1]/text()[1]">
-              <source>maximaal </source>
-              <target>h&#246;chstens </target>
-            </segment>
-          </unit>
-          <unit id="/html/body/ol/li[1]/strong">
-            <segment id="/html/body/ol/li[1]/strong">
-              <source>twee maal</source>
-              <target>zwei Mal</target>
-            </segment>
-          </unit>
-          <unit id="/html/body/ol/li[1]/text()[2]">
-            <segment id="/html/body/ol/li[1]/text()[2]">
-              <source> tijdens de loopbaan van de werknemer bij een werkgever: </source>
-              <target> w&#228;hrend der Laufbahn des Arbeitnehmers bei dem Arbeitgeber: </target>
+              <source>maximaal <g ctype="x-html-strong">twee maal</g> tijdens de loopbaan van de werknemer bij een werkgever: </source>
+              <target>h&#246;chstens <g ctype="x-html-strong">zwei Mal</g> w&#228;hrend der Laufbahn des Arbeitnehmers bei dem Arbeitgeber: </target>
             </segment>
           </unit>
           <group id="/html/body/ol/li[1]/ul">
@@ -72,20 +60,8 @@
         <group id="/html/body/ol/li[2]">
           <unit id="/html/body/ol/li[2]/text()[1]">
             <segment id="/html/body/ol/li[2]/text()[1]">
-              <source>voor zover het </source>
-              <target>wenn der </target>
-            </segment>
-          </unit>
-          <unit id="/html/body/ol/li[2]/strong">
-            <segment id="/html/body/ol/li[2]/strong">
-              <source>maximale bedrag</source>
-              <target>H&#246;chstbetrag</target>
-            </segment>
-          </unit>
-          <unit id="/html/body/ol/li[2]/text()[2]">
-            <segment id="/html/body/ol/li[2]/text()[2]">
-              <source> niet hoger is dan: </source>
-              <target> nicht h&#246;her ist als: </target>
+              <source>voor zover het <g ctype="x-html-strong">maximale bedrag</g> niet hoger is dan: </source>
+              <target>wenn der <g ctype="x-html-strong">H&#246;chstbetrag</g> nicht h&#246;her ist als: </target>
             </segment>
           </unit>
           <group id="/html/body/ol/li[2]/ul">
@@ -132,178 +108,6 @@
     <group id="[%locale%][body2]">
       <unit id="/html/body/p[1]">
         <segment id="/html/body/p[1]">
-          <source>
-  Een anci&#235;nniteitspremie in speci&#235;n, in natura of in
-  aankoopcheques, is geen loon als ze op volgende wijze wordt
-  toegekend:
-</source>
-          <target>
-  Eine Dienstalterszulage in bar, Sachvorteilen oder in Form von
-  Einkaufsgutscheinen ist kein Lohn, wenn sie auf folgende Weise
-  gew&#228;hrt wird:
-</target>
-        </segment>
-      </unit>
-      <group id="/html/body/ol">
-        <group id="/html/body/ol/li[1]">
-          <unit id="/html/body/ol/li[1]/text()[1]">
-            <segment id="/html/body/ol/li[1]/text()[1]">
-              <source>maximaal </source>
-              <target>h&#246;chstens </target>
-            </segment>
-          </unit>
-          <unit id="/html/body/ol/li[1]/strong">
-            <segment id="/html/body/ol/li[1]/strong">
-              <source>twee maal</source>
-              <target>zwei Mal</target>
-            </segment>
-          </unit>
-          <unit id="/html/body/ol/li[1]/text()[2]">
-            <segment id="/html/body/ol/li[1]/text()[2]">
-              <source> tijdens de loopbaan van de werknemer bij een werkgever: </source>
-              <target> w&#228;hrend der Laufbahn des Arbeitnehmers bei dem Arbeitgeber: </target>
-            </segment>
-          </unit>
-          <group id="/html/body/ol/li[1]/ul">
-            <unit id="/html/body/ol/li[1]/ul/li[1]">
-              <segment id="/html/body/ol/li[1]/ul/li[1]">
-                <source>&#233;&#233;n maal ten vroegste tijdens het kalenderjaar waarin
-      hij 25 jaar in dienst is bij de werkgever,
-      </source>
-                <target>fr&#252;hestens in dem Kalenderjahr, in dem er 25 Jahre bei
-      dem Arbeitgeber im Dienst war,
-      </target>
-              </segment>
-            </unit>
-            <unit id="/html/body/ol/li[1]/ul/li[2]">
-              <segment id="/html/body/ol/li[1]/ul/li[2]">
-                <source>en een tweede maal ten vroegste tijdens het
-      kalenderjaar waarin hij 35 jaar in dienst is bij de
-      werkgever,
-      </source>
-                <target>die zweite Zulage fr&#252;hestens im Kalenderjahr gezahlt
-      wird, in dem er 35 Jahre bei dem Arbeitgeber im Dienst war,
-      </target>
-              </segment>
-            </unit>
-          </group>
-        </group>
-        <group id="/html/body/ol/li[2]">
-          <unit id="/html/body/ol/li[2]/text()[1]">
-            <segment id="/html/body/ol/li[2]/text()[1]">
-              <source>voor zover het </source>
-              <target>wenn der </target>
-            </segment>
-          </unit>
-          <unit id="/html/body/ol/li[2]/strong">
-            <segment id="/html/body/ol/li[2]/strong">
-              <source>maximale bedrag</source>
-              <target>H&#246;chstbetrag</target>
-            </segment>
-          </unit>
-          <unit id="/html/body/ol/li[2]/text()[2]">
-            <segment id="/html/body/ol/li[2]/text()[2]">
-              <source> niet hoger is dan: </source>
-              <target> nicht h&#246;her ist als: </target>
-            </segment>
-          </unit>
-          <group id="/html/body/ol/li[2]/ul">
-            <unit id="/html/body/ol/li[2]/ul/li[1]">
-              <segment id="/html/body/ol/li[2]/ul/li[1]">
-                <source>&#233;&#233;n maal het bruto bedrag van de maandwedde voor 25
-      jaar dienst,
-      </source>
-                <target>das Einfache des Bruttobetrags des Monatsgehalts f&#252;r 25
-      Dienstjahre,
-      </target>
-              </segment>
-            </unit>
-            <unit id="/html/body/ol/li[2]/ul/li[2]">
-              <segment id="/html/body/ol/li[2]/ul/li[2]">
-                <source>twee maal het bruto bedrag van de maandwedde voor 35
-      jaar dienst.
-      </source>
-                <target>das Doppelte des Bruttobetrags des Monatsgehalts f&#252;r 35
-      Dienstjahre.
-      </target>
-              </segment>
-            </unit>
-          </group>
-        </group>
-      </group>
-      <unit id="/html/body/p[2]">
-        <segment id="/html/body/p[2]">
-          <source>
-  Indien de anci&#235;nniteitspremie dit bedrag overschrijdt, is
-  alleen het gedeelte tot beloop van dit bedrag vrijgesteld van
-  bijdragen.
-</source>
-          <target>
-  Wenn die Dienstalterszulage diesen Betrag &#252;berschreitet, ist
-  nur der Teil in H&#246;he dieses Betrags von Beitr&#228;gen befreit.
-</target>
-        </segment>
-      </unit>
-      <unit id="/html/body/p[3]">
-        <segment id="/html/body/p[3]">
-          <source>
-  In afwijking hiervan mag een werkgever er ook voor kiezen om
-  het voordeel te bepalen in functie van het gemiddeld bruto
-  bedrag van een maandloon in zijn onderneming. Werkgevers die
-  hiervoor kiezen moeten per kalenderjaar het gemiddeld bruto
-  bedrag van een maandloon in de onderneming vaststellen op basis
-  van de verhouding tussen de uitbetaalde lonen en het aantal
-  voltijdse equivalenten tijdens het voorgaande kalenderjaar.
-</source>
-          <target>
-  Abweichend davon kann ein Arbeitgeber auch dazu &#252;bergehen, den
-  Vorteil in Abh&#228;ngigkeit des durchschnittlichen Bruttobetrags
-  eines Monatslohns in seinem Unternehmen festzulegen.
-  Arbeitgeber, die diese M&#246;glichkeit w&#228;hlen, m&#252;ssen je
-  Kalenderjahr den durchschnittlichen Bruttobetrag eines
-  Monatslohns im Unternehmen auf Basis des Verh&#228;ltnisses zwischen
-  den gezahlten L&#246;hnen und der Anzahl der Vollzeit&#228;quivalente
-  w&#228;hrend des vorangegangenen Kalenderjahres festlegen.
-</target>
-        </segment>
-      </unit>
-      <unit id="/html/body/p[4]">
-        <segment id="/html/body/p[4]">
-          <source>
-  Tijdens een kalenderjaar mag een werkgever beide
-  berekeningswijzen niet samen toepassen. Doet hij dat wel, dan
-  worden alle tijdens het kalenderjaar toegekende
-  anci&#235;nniteitspremies beschouwd als loon.&lt;br/&gt;
-</source>
-          <target>
-  W&#228;hrend eines Kalenderjahres darf ein Arbeitgeber beide
-  Berechnungsarten nicht zusammen anwenden. Falls dies der Fall
-  ist, werden alle w&#228;hrend dieses Kalenderjahres gew&#228;hrten
-  Dienstalterszulagen als Lohn betrachtet.&lt;br/&gt;
-</target>
-        </segment>
-      </unit>
-      <unit id="/html/body/p[5]">
-        <segment id="/html/body/p[5]">
-          <source>
-  De werkgevers die zich op deze vrijstelling van bijdragen voor
-  een anci&#235;nniteitspremie beroepen, moeten, op vraag van de RSZ,
-  alle elementen en berekeningen aanbrengen die toelaten te
-  beoordelen of de toegekende voordelen de maximumbedragen
-  respecteren.
-</source>
-          <target>
-  Arbeitgeber, die sich auf diese Beitragsbefreiung berufen,
-  m&#252;ssen auf Ersuchen des LSS alle Elemente und Berechnungen
-  vorlegen, die eine Beurteilung der Frage zulassen, ob die
-  bewilligten Vorteile die H&#246;chstbetr&#228;ge nicht &#252;berschreiten.
-</target>
-        </segment>
-      </unit>
-    </group>
-    <group id="[%locale%][body3]">
-      <unit id="/html/body/p[1]">
-        <segment id="/html/body/p[1]">
           <source> Een anci&#235;nniteitspremie in speci&#235;n, in natura of in aankoopcheques, is geen loon als ze op volgende wijze wordt toegekend: </source>
           <target> Eine Dienstalterszulage in bar, Sachvorteilen oder in Form von Einkaufsgutscheinen ist kein Lohn, wenn sie auf folgende Weise gew&#228;hrt wird: </target>
         </segment>
@@ -312,20 +116,8 @@
         <group id="/html/body/ol/li[1]">
           <unit id="/html/body/ol/li[1]/text()[1]">
             <segment id="/html/body/ol/li[1]/text()[1]">
-              <source>maximaal </source>
-              <target>h&#246;chstens </target>
-            </segment>
-          </unit>
-          <unit id="/html/body/ol/li[1]/strong">
-            <segment id="/html/body/ol/li[1]/strong">
-              <source>twee maal</source>
-              <target>zwei Mal</target>
-            </segment>
-          </unit>
-          <unit id="/html/body/ol/li[1]/text()[2]">
-            <segment id="/html/body/ol/li[1]/text()[2]">
-              <source> tijdens de loopbaan van de werknemer bij een werkgever: </source>
-              <target> w&#228;hrend der Laufbahn des Arbeitnehmers bei dem Arbeitgeber: </target>
+              <source>maximaal <g ctype="x-html-strong">twee maal</g> tijdens de loopbaan van de werknemer bij een werkgever: </source>
+              <target>h&#246;chstens <g ctype="x-html-strong">zwei Mal</g> w&#228;hrend der Laufbahn des Arbeitnehmers bei dem Arbeitgeber: </target>
             </segment>
           </unit>
           <group id="/html/body/ol/li[1]/ul">
@@ -346,20 +138,8 @@
         <group id="/html/body/ol/li[2]">
           <unit id="/html/body/ol/li[2]/text()[1]">
             <segment id="/html/body/ol/li[2]/text()[1]">
-              <source>voor zover het </source>
-              <target>wenn der </target>
-            </segment>
-          </unit>
-          <unit id="/html/body/ol/li[2]/strong">
-            <segment id="/html/body/ol/li[2]/strong">
-              <source>maximale bedrag</source>
-              <target>H&#246;chstbetrag</target>
-            </segment>
-          </unit>
-          <unit id="/html/body/ol/li[2]/text()[2]">
-            <segment id="/html/body/ol/li[2]/text()[2]">
-              <source> niet hoger is dan: </source>
-              <target> nicht h&#246;her ist als: </target>
+              <source>voor zover het <g ctype="x-html-strong">maximale bedrag</g> niet hoger is dan: </source>
+              <target>wenn der <g ctype="x-html-strong">H&#246;chstbetrag</g> nicht h&#246;her ist als: </target>
             </segment>
           </unit>
           <group id="/html/body/ol/li[2]/ul">
