fix: missing translation

--- a/EMS/core-bundle/src/Resources/translations/EMSCoreBundle.en.yml
+++ b/EMS/core-bundle/src/Resources/translations/EMSCoreBundle.en.yml
@@ -1,3 +1,7 @@
+__views:
+    elements:
+        revision-toolbar-html:
+            add-to-release: Add to release
 log:
     service:
         form:
