fix: a counter is required to help authors to evaluate the size of a meta title or a meta description

--- a/EMS/core-bundle/src/Resources/translations/EMSCoreBundle.en.yml
+++ b/EMS/core-bundle/src/Resources/translations/EMSCoreBundle.en.yml
@@ -526,6 +526,8 @@ data:
         add_to_release: 'Add to release'
         add_to_release_confirm: 'Do you confirm ?'
 field_type:
+    textarea:
+        counter: '%count% characters'
     json_menu_editor:
         add: Add
         add_item: 'Add a new %singular%'
