feat: add the WYSIWYG profile in the datatable view (in order to simplify the review by the webmaster)

--- a/EMS/core-bundle/src/Resources/translations/EMSCoreBundle.en.yml
+++ b/EMS/core-bundle/src/Resources/translations/EMSCoreBundle.en.yml
@@ -867,6 +867,7 @@ user:
             roles: Roles
             username: Username
             locale_preferred: 'Locale preferred'
+            wysiwyg_profile: 'WYSIWYG profile'
             locale_ui: UI
     add:
         button: 'Add user'
