ref: translation after merge

--- a/EMS/core-bundle/src/Resources/translations/EMSCoreBundle.en.yml
+++ b/EMS/core-bundle/src/Resources/translations/EMSCoreBundle.en.yml
@@ -1179,6 +1179,7 @@ schedule:
             cron: Cron
             previous-run: 'Previous run'
             next-run: 'Next run'
+            tag: 'Tag'
         reorder: Prioritize
     actions:
         delete_selected: 'Delete selected'
