feat: add load more spinner for files

--- a/EMS/core-bundle/src/Resources/translations/emsco-component.en.yml
+++ b/EMS/core-bundle/src/Resources/translations/emsco-component.en.yml
@@ -6,5 +6,6 @@ media_library:
             submit: Create
             cancel: Cancel
     file:
+        load_more: 'Loading more files ...'
         add:
             title: Upload
