--- a/EMS/admin-ui-bundle/src/Resources/translations/user.en.xlf
+++ b/EMS/admin-ui-bundle/src/Resources/translations/user.en.xlf
@@ -37,6 +37,14 @@
         <source>user.login.forgot</source>
         <target>I forgot my password</target>
       </trans-unit>
+      <trans-unit id="IsHtnX7" resname="user.login.user_aria_label">
+        <source>user.login.user_aria_label</source>
+        <target>Email or Username</target>
+      </trans-unit>
+      <trans-unit id="6GSzGeY" resname="user.login.password1_aria_label">
+        <source>user.login.password1_aria_label</source>
+        <target>Password</target>
+      </trans-unit>
     </body>
   </file>
 </xliff>
