feat: block breadcrumb

--- a/EMS/admin-ui-bundle/src/Resources/translations/user.en.xlf
+++ b/EMS/admin-ui-bundle/src/Resources/translations/user.en.xlf
@@ -107,11 +107,15 @@
       </trans-unit>
       <trans-unit id="5yLxmZH" resname="user.profile.edit.title">
         <source>user.profile.edit.title</source>
-        <target>Your profile</target>
+        <target>Edit your profile</target>
       </trans-unit>
       <trans-unit id="QxXqqK_" resname="user.profile.show.action.cancel">
         <source>user.profile.show.action.cancel</source>
         <target>Cancel</target>
+      </trans-unit>
+      <trans-unit id="ZWXcMxP" resname="user.profile.edit.breadcrumb_title">
+        <source>user.profile.edit.breadcrumb_title</source>
+        <target>Edit</target>
       </trans-unit>
     </body>
   </file>
