--- a/EMS/admin-ui-bundle/src/Resources/translations/user.en.xlf
+++ b/EMS/admin-ui-bundle/src/Resources/translations/user.en.xlf
@@ -93,15 +93,15 @@
         <source>user.profile.show.action.edit</source>
         <target>Edit</target>
       </trans-unit>
-      <trans-unit id="2obisa." resname="user.change_password.title">
+      <trans-unit id="2obisa." resname="user.profile.change_password.title">
         <source>user.change_password.title</source>
         <target>Change password</target>
       </trans-unit>
-      <trans-unit id="3Vrpx08" resname="user.change_password.submit">
+      <trans-unit id="3Vrpx08" resname="user.profile.change_password.submit">
         <source>user.change_password.submit</source>
         <target>Change password</target>
       </trans-unit>
-      <trans-unit id="VLmPHXS" resname="user.change_password.cancel">
+      <trans-unit id="VLmPHXS" resname="user.profile.change_password.cancel">
         <source>user.change_password.cancel</source>
         <target>Cancel</target>
       </trans-unit>
