refactor: Login -> Username

--- a/EMS/admin-ui-bundle/src/Resources/translations/user.en.xlf
+++ b/EMS/admin-ui-bundle/src/Resources/translations/user.en.xlf
@@ -53,9 +53,9 @@
         <source>user.profile.show.alt.user_profile_picture</source>
         <target>Your profile's picture. Check Gravatar.com to chang it.</target>
       </trans-unit>
-      <trans-unit id="ccD4UqU" resname="user.profile.show.login">
-        <source>user.profile.show.login</source>
-        <target>Login</target>
+      <trans-unit id="ccD4UqU" resname="user.profile.show.username">
+        <source>user.profile.show.username</source>
+        <target>Username</target>
       </trans-unit>
       <trans-unit id="S0.jP35" resname="user.profile.show.display_name">
         <source>user.profile.show.display_name</source>
