refactor: AnalyzerPickerType (translation+ repository)

--- a/EMS/core-bundle/src/Resources/translations/emsco-forms.en.yml
+++ b/EMS/core-bundle/src/Resources/translations/emsco-forms.en.yml
@@ -1,4 +1,49 @@
+analyzer.type.standard: Standard
+analyzer.type.simple: Simple
+analyzer.type.whitespace: Whitespace
+analyzer.type.stop: Stop
+analyzer.type.keyword: Keyword
+analyzer.type.version: Version
+analyzer.type.arabic: Arabic
+analyzer.type.armenian: Armenian
+analyzer.type.basque: Basque
+analyzer.type.brazilian: Brazilian
+analyzer.type.bulgarian: Bulgarian
+analyzer.type.catalan: Catalan
+analyzer.type.cjk: CJK
+analyzer.type.czech: Czech
+analyzer.type.danish: Danish
+analyzer.type.dutch: Dutch
+analyzer.type.english: English
+analyzer.type.finnish: Finnish
+analyzer.type.french: French
+analyzer.type.galician: Galician
+analyzer.type.german: German
+analyzer.type.greek: Greek
+analyzer.type.hindi: Hindi
+analyzer.type.hungarian: Hungarian
+analyzer.type.indonesian: Indonesian
+analyzer.type.irish: Irish
+analyzer.type.italian: Italian
+analyzer.type.latvian: Latvian
+analyzer.type.lithuanian: Lithuanian
+analyzer.type.norwegian: Norwegian
+analyzer.type.persian: Persian
+analyzer.type.portuguese: Portuguese
+analyzer.type.romanian: Romanian
+analyzer.type.russian: Russian
+analyzer.type.sorani: Sorani
+analyzer.type.spanish: Spanish
+analyzer.type.swedish: Swedish
+analyzer.type.turkish: Turkish
+analyzer.type.thai: Thai
+analyzer.category.not_defined: 'Not defined'
+analyzer.category.built_in: 'Built-in'
+analyzer.category.languages: Languages
+analyzer.category.customized: Customized
 form:
+    analyzer_picker:
+        label: 'Analyzer'
     name: Name
     label: Label
     create: Create
