--- a/EMS/core-bundle/src/Resources/translations/emsco-component.en.yml
+++ b/EMS/core-bundle/src/Resources/translations/emsco-component.en.yml
@@ -12,6 +12,9 @@ media_library:
 
 json_menu_nested:
     error:
-        not_found:
-            item: 'Could not find item'
-            node: 'Could not find node'
+        node_not_found: 'Item type not found'
+        item_not_found: 'Item not found'
+        item_parent_not_found: 'Parent not found'
+        move_child_missing: 'Move failed, current parent does not have item'
+        move_child_exists: 'Move failed, new parent already has item'
+        item_edit_outdated: 'Out of sync, close and retry!'
