fix: show requester in task view modal.

--- a/EMS/core-bundle/src/Resources/translations/EMSCoreBundle.en.yml
+++ b/EMS/core-bundle/src/Resources/translations/EMSCoreBundle.en.yml
@@ -760,6 +760,7 @@ task:
         assignee: Assignee
         deadline: Deadline
         description: Description
+        requester: Requester
         title: Title
         delay: 'Delay (in days)'
     finished:
